fix getuservideo
