# src/routes/videoRoutes.js
@@ -19,7 +19,7 @@ const fileUpload = require("../middleware/fileUpload");
 
 router.get("/getAll", getAllVideos);
 
-router.get("/user/:userId", getUserVideos);
+router.get("/user/:userId", isAuth, getUserVideos);
 
 router.get("/search/:query", searchVideos);
 
